fix disply problems by overflow wrapping and make cards responsive to window size

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,6 +1,6 @@
 .movies-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     background-color: black; 
 }
